Gaussian and uniform mutation

--- a/Sprawozdanie-OE1.ipynb
+++ b/Sprawozdanie-OE1.ipynb
@@ -37,21 +37,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a08ff749af7d088d",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-28T08:09:48.476822600Z",
-     "start_time": "2023-10-28T08:09:48.473820900Z"
+     "end_time": "2023-10-28T09:40:26.281197600Z",
+     "start_time": "2023-10-28T09:40:26.265133500Z"
     }
    },
    "outputs": [],
    "source": [
     "#Import bibliotek\n",
     "\n",
-    "from app.graphing import *\n",
-    "import benchmark_functions as bf"
+    "import benchmark_functions as bf\n",
+    "import opfunu as of\n",
+    "import matplotlib as plt"
    ]
   },
   {
@@ -68,19 +69,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "9d08a6cd5e714b0d",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-28T08:09:48.474820800Z"
+     "end_time": "2023-10-28T09:44:05.938410500Z",
+     "start_time": "2023-10-28T09:44:05.870992200Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'FigureCanvasAgg' object has no attribute 'set_window_title'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[19], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m func \u001B[38;5;241m=\u001B[39m bf\u001B[38;5;241m.\u001B[39mRana(n_dimensions\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m2\u001B[39m)\n\u001B[1;32m----> 2\u001B[0m \u001B[43mfunc\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mshow\u001B[49m\u001B[43m(\u001B[49m\u001B[43mshowPoints\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mfunc\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mminima\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      3\u001B[0m func\u001B[38;5;241m.\u001B[39mshow(asHeatMap\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n",
+      "File \u001B[1;32m~\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\benchmark_functions\\benchmark_functions.py:198\u001B[0m, in \u001B[0;36mBenchmarkFunction.show\u001B[1;34m(self, bounds, asHeatMap, resolution, showPoints)\u001B[0m\n\u001B[0;32m    196\u001B[0m \tZ \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39masarray([[\u001B[38;5;28mself\u001B[39m((X[i][j],Y[i][j])) \u001B[38;5;28;01mfor\u001B[39;00m j \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(X[i]))] \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(X))])\n\u001B[0;32m    197\u001B[0m fig \u001B[38;5;241m=\u001B[39m plt\u001B[38;5;241m.\u001B[39mfigure()\n\u001B[1;32m--> 198\u001B[0m \u001B[43mfig\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcanvas\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mset_window_title\u001B[49m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mBenchmark Function: \u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;241m+\u001B[39m\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_name)\n\u001B[0;32m    199\u001B[0m fig\u001B[38;5;241m.\u001B[39msuptitle(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_name)\n\u001B[0;32m    200\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m asHeatMap:\n",
+      "\u001B[1;31mAttributeError\u001B[0m: 'FigureCanvasAgg' object has no attribute 'set_window_title'"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "<Figure size 640x480 with 0 Axes>"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "func = bf.Rana(n_dimensions=2)\n",
+    "func.show(showPoints=func.minima())\n",
     "func.show(asHeatMap=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [],
+   "source": [
+    "func = of.name_based.r_func.Rana(ndim=2)\n",
+    "plt.pyplot.show(func)    \n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-28T09:41:30.153590500Z",
+     "start_time": "2023-10-28T09:41:30.110811300Z"
+    }
+   },
+   "id": "28e7b95d543c3741"
   },
   {
    "cell_type": "markdown",
@@ -94,29 +134,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "35a8503fda590a37",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running calculations...\n",
+      "Range start: -512\n",
+      "Range end: 512\n",
+      "Epoch: 100\n",
+      "Population size: 100\n",
+      "Precision: 0.1\n",
+      "Elite strategy: 5\n",
+      "Variable number: 2\n",
+      "Cross probability: 20\n",
+      "Mutation probability: 20\n",
+      "Inversion probability: 20\n",
+      "Picked selection_method: best\n",
+      "Percent to next: 20.0\n",
+      "Tournaments: 20.0\n",
+      "Picked cross_method: uniform\n",
+      "Picked mutation_method: one point\n",
+      "Picked is min/max \"0\"\n",
+      "Is real: \"0\"\n",
+      "Exporting...\n",
+      "C:/Users/Hyperbook/Documents/Magister/OE1/OE1/csv_files/test.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Hyperbook\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\tkinter\\__init__.py\", line 1948, in __call__\n",
+      "    return self.func(*args)\n",
+      "           ^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Hyperbook\\Documents\\Magister\\OE1\\OE1\\app\\libs\\UI\\window.py\", line 35, in open\n",
+      "    Calculations.run_calculations(\n",
+      "  File \"C:\\Users\\Hyperbook\\Documents\\Magister\\OE1\\OE1\\app\\calculate.py\", line 175, in run_calculations\n",
+      "    Calculations.export_to_csv()\n",
+      "  File \"C:\\Users\\Hyperbook\\Documents\\Magister\\OE1\\OE1\\app\\calculate.py\", line 229, in export_to_csv\n",
+      "    data = np.reshape(data, (data.shape[0], ))\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Hyperbook\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\numpy\\core\\fromnumeric.py\", line 285, in reshape\n",
+      "    return _wrapfunc(a, 'reshape', newshape, order=order)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Hyperbook\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\numpy\\core\\fromnumeric.py\", line 59, in _wrapfunc\n",
+      "    return bound(*args, **kwds)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^\n",
+      "ValueError: cannot reshape array of size 2200 into shape (100,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "! python main.py"
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-28T09:16:40.661091700Z",
-     "start_time": "2023-10-28T09:14:02.975063900Z"
+     "end_time": "2023-10-30T21:50:51.376786100Z",
+     "start_time": "2023-10-30T21:50:37.593512900Z"
     }
    },
-   "outputs": [],
-   "source": [
-    "! python main.py"
-   ]
+   "id": "35a8503fda590a37"
   },
   {
    "cell_type": "markdown",
-   "id": "45dee61110993867",
+   "source": [
+    "## Zczytanie danych z obliczonego wcześniej programu"
+   ],
    "metadata": {
     "collapsed": false
    },
-   "source": [
-    "## Zczytanie danych z obliczonego wcześniej programu"
-   ]
+   "id": "45dee61110993867"
   },
   {
    "cell_type": "code",
