--- a/Sprawozdanie-OE2.ipynb
+++ b/Sprawozdanie-OE2.ipynb
@@ -7,8 +7,7 @@
     "collapsed": false
    },
    "source": [
-    "# Sprawozdanie - Projekt 1 – implementacja klasycznego algorytmu genetycznego\n",
-    "\n",
+    "# Sprawozdanie - Projekt 2 – implementacja chromosomu rzeczywistego\n",
     "Autorzy:\n",
     "* Bojarski Bartosz\n",
     "* Głowacki Aleksander\n",
@@ -36,6 +35,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a08ff749af7d088d",
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-28T09:40:26.281197600Z",
+     "start_time": "2023-10-28T09:40:26.265133500Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#Import bibliotek\n",
+    "\n",
+    "import benchmark_functions as bf\n",
+    "import opfunu as of\n",
+    "import matplotlib as plt"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "da29d473f4dd097b",
    "metadata": {
@@ -44,10 +63,63 @@
    "source": [
     "## Analizowana funkcja - Funkcja Rana\n",
     "\n",
-    "Wykres poglądowy 2-wymiarowej funkcji Rana:\n",
-    "\n",
-    "![Rana plot](plots/Rana.png)"
+    "Wykres poglądowy:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "9d08a6cd5e714b0d",
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-28T09:44:05.938410500Z",
+     "start_time": "2023-10-28T09:44:05.870992200Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'FigureCanvasAgg' object has no attribute 'set_window_title'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[19], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m func \u001B[38;5;241m=\u001B[39m bf\u001B[38;5;241m.\u001B[39mRana(n_dimensions\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m2\u001B[39m)\n\u001B[1;32m----> 2\u001B[0m \u001B[43mfunc\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mshow\u001B[49m\u001B[43m(\u001B[49m\u001B[43mshowPoints\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mfunc\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mminima\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      3\u001B[0m func\u001B[38;5;241m.\u001B[39mshow(asHeatMap\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n",
+      "File \u001B[1;32m~\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\benchmark_functions\\benchmark_functions.py:198\u001B[0m, in \u001B[0;36mBenchmarkFunction.show\u001B[1;34m(self, bounds, asHeatMap, resolution, showPoints)\u001B[0m\n\u001B[0;32m    196\u001B[0m \tZ \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39masarray([[\u001B[38;5;28mself\u001B[39m((X[i][j],Y[i][j])) \u001B[38;5;28;01mfor\u001B[39;00m j \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(X[i]))] \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(X))])\n\u001B[0;32m    197\u001B[0m fig \u001B[38;5;241m=\u001B[39m plt\u001B[38;5;241m.\u001B[39mfigure()\n\u001B[1;32m--> 198\u001B[0m \u001B[43mfig\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcanvas\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mset_window_title\u001B[49m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mBenchmark Function: \u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;241m+\u001B[39m\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_name)\n\u001B[0;32m    199\u001B[0m fig\u001B[38;5;241m.\u001B[39msuptitle(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_name)\n\u001B[0;32m    200\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m asHeatMap:\n",
+      "\u001B[1;31mAttributeError\u001B[0m: 'FigureCanvasAgg' object has no attribute 'set_window_title'"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "<Figure size 640x480 with 0 Axes>"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "func = bf.Rana(n_dimensions=2)\n",
+    "func.show(showPoints=func.minima())\n",
+    "func.show(asHeatMap=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [],
+   "source": [
+    "func = of.name_based.r_func.Rana(ndim=2)\n",
+    "plt.pyplot.show(func)    \n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-28T09:41:30.153590500Z",
+     "start_time": "2023-10-28T09:41:30.110811300Z"
+    }
+   },
+   "id": "28e7b95d543c3741"
   },
   {
    "cell_type": "markdown",
@@ -129,6 +201,106 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "## Zczytanie danych z obliczonego wcześniej programu"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "45dee61110993867"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "da72740eccc4128c",
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-28T06:35:28.026270Z",
+     "start_time": "2023-10-28T06:35:27.976074200Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#Tutaj teoretycznie będą 3 subploty, więc wtedy można to opisać w ten sposób, ale ja bym je jakoś rozdzielił, tak jak w tych punktach poniżej.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e49b764b9570c96",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "## Wykresy zależności funkcji celu od iteracji"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "613b623a8d13e085",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-26T21:53:14.045461300Z",
+     "start_time": "2023-10-26T21:53:14.040419800Z"
+    },
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adcd3993771709fa",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "## Średnie wartości w kolejnych iteracjach"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "42d65f4579b8416f",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-26T21:53:14.479113700Z",
+     "start_time": "2023-10-26T21:53:14.475974700Z"
+    },
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7c9eec5a53db467",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "## Odchylenie standardowe w kolejnych iteracjach"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "c3b1a8ec6157a733",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-26T21:53:15.362877700Z",
+     "start_time": "2023-10-26T21:53:15.359798800Z"
+    },
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "597c83181470d809",
    "metadata": {
     "collapsed": false
@@ -136,26 +308,21 @@
    "source": [
     "## Porównanie wyników\n",
     "\n",
-    "Poniżej przedstawione jest kilka przykładów, wraz z odpowiadającymi im wykresami, oraz wynikami, które potem będą porównane.\n",
-    "\n",
-    "Parametry podstawowe:\n",
     "* Zakres ∈ <-512;512>\n",
-    "* Populacja = 1000\n",
-    "* Liczba epok = 1000\n",
-    "* Liczba zmiennych = 2 \n",
+    "* Populacja = 100\n",
+    "* Liczba epok = 200\n",
     "* Precyzja = 0.1\n",
     "* Liczba bitów = 25\n",
-    "* Liczba chromosomów w metodzie turniejowej i best = 20\n",
-    "* Procent brany w strategii elitarnej = 1%\n",
-    "* Max, czy min = Min\n",
+    "* Liczba chromosomów używanych w metodach best i tournament = 20\n",
     "\n",
     "Konfiguarcja #1: \n",
-    "* Prawdopodobieństwo krzyżowania = 0.2 \n",
-    "* Prawdopodobieństwo mutacji = 0.2\n",
-    "* Prawdopodobieństwo inwersji = 0.2\n",
-    "* Wybrana strategia = Tournament\n",
-    "* Rodzaj krzyzowania = Three Point\n",
-    "* Wybrany rodzaj mutacji = Two Point\n",
+    "* Prawdopodobieństwo mutacji: 0\n",
+    "* Prawdopodobieństwo krzyżowania: 0.4 \n",
+    "* Prawdopodobieństwo inwersji: 0.1\n",
+    "* Wybrana strategia: Tournament\n",
+    "* Rodzaj krzyzowania: Two Point\n",
+    "* Wybrany rodzaj mutacji: n/a\n",
+    "* Max, czy min: Min\n",
     "\n",
     "![Configuration 1](plots/conf1.png)"
    ]
@@ -173,8 +340,8 @@
    },
    "outputs": [],
    "source": [
-    "# Result found in 0:00:28:057137 seconds\n",
-    "# f(-493.4909623839766, 403.446995603322) = [-490.44155743728703]"
+    "# Result found in 0:00:00:03558 seconds\n",
+    "# f(0, 10) = [1.8862700095168572]"
    ]
   },
   {
@@ -189,15 +356,15 @@
     "collapsed": false
    },
    "source": [
-    "Konfiguarcja #2: \n",
-    "* Prawdopodobieństwo mutacji = 0.5\n",
-    "* Prawdopodobieństwo krzyżowania = 0.5\n",
-    "* Prawdopodobieństwo inwersji = 0.5\n",
-    "* Wybrana strategia = Select Best\n",
-    "* Rodzaj krzyzowania = Two Point\n",
-    "* Wybrany rodzaj mutacji = Two Point\n",
-    "\n",
-    "![Configuration 2](plots/conf2.png)"
+    "Konfiguarcja - Olek #2: \n",
+    "* Prawdopodobieństwo mutacji: 50%\n",
+    "* Prawdopodobieństwo krzyżowania: 50%\n",
+    "* Prawdopodobieństwo inwersji: 50%\n",
+    "* Wybrana strategia: Select Best\n",
+    "* Rodzaj krzyzowania: Two Point\n",
+    "* Wybrany rodzaj mutacji: Two Point\n",
+    "* Max, czy min: Min\n",
+    "![1cop.PNG](attachment:1cop.PNG)"
    ]
   },
   {
@@ -213,8 +380,8 @@
    },
    "outputs": [],
    "source": [
-    "# Result found in 0:01:09:103718 seconds    \n",
-    "# f(-303.89838788470934, 502.495359062042) = [-489.1288596166677]"
+    "# Result found in 0.002016 seconds\n",
+    "# f(0, 10) = [1.8862700095168572]"
    ]
   },
   {
@@ -225,12 +392,13 @@
    },
    "source": [
     "Konfiguracja #3:\n",
-    "* Prawdopodobieństwo mutacji = 0.9\n",
-    "* Prawdopodobieństwo krzyżowania = 0.9\n",
-    "* Prawdopodobieństwo inwersji = 0.9\n",
-    "* Wybrana strategia = Tournament\n",
-    "* Rodzaj krzyzowania = Uniform\n",
-    "* Wybrany rodzaj mutacji = One Point\n",
+    "* Prawdopodobieństwo mutacji:\n",
+    "* Prawdopodobieństwo krzyżowania:\n",
+    "* Prawdopodobieństwo inwersji:\n",
+    "* Wybrana strategia:\n",
+    "* Rodzaj krzyzowania:\n",
+    "* Wybrany rodzaj mutacji:\n",
+    "* Max, czy min:\n",
     "\n",
     "![Configuration 3](plots/conf3.png)"
    ]
@@ -243,10 +411,7 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": [
-    "# Result found in 0:00:010:103718 seconds    \n",
-    "# f(475.48216902784566, -431.9609184171959) = [-467.2650857226316]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -256,13 +421,13 @@
    },
    "source": [
     "Konfiguracja #4:\n",
-    "* Prawdopodobieństwo mutacji = 0.7\n",
-    "* Prawdopodobieństwo krzyżowania = 0.7\n",
-    "* Prawdopodobieństwo inwersji = 0.7\n",
-    "* Wybrana strategia = Roulette\n",
-    "* Rodzaj krzyzowania = One Point\n",
-    "* Wybrany rodzaj mutacji = Edge\n",
-    "* Max, czy min = Min\n",
+    "* Prawdopodobieństwo mutacji: 70%\n",
+    "* Prawdopodobieństwo krzyżowania: 70%\n",
+    "* Prawdopodobieństwo inwersji: 70%\n",
+    "* Wybrana strategia: Roulette\n",
+    "* Rodzaj krzyzowania: One Point\n",
+    "* Wybrany rodzaj mutacji: Edge\n",
+    "* Max, czy min: Max\n",
     "\n",
     "![Configuration 4](plots/conf4.png)"
    ]
@@ -276,8 +441,8 @@
    },
    "outputs": [],
    "source": [
-    "# Result found in 0:00:01.002794 seconds\n",
-    "# f(479.9843673668784, 501.494870542257) = [-479.6659649577644]"
+    "# Result found in 0:00:00:020000 seconds\n",
+    "# f(0, 10) = [1.8862700095168572]"
    ]
   },
   {
@@ -289,7 +454,7 @@
    "source": [
     "Tabela z porównaniem wyników:\n",
     "\n",
-    "Będzie wstawiona, gdy będą wyniki. Tutaj jeszcze dać idealne wyniki"
+    "Będzie wstawiona, gdy będą wyniki."
    ]
   },
   {
