Added result table

--- a/Sprawozdanie-OE1.ipynb
+++ b/Sprawozdanie-OE1.ipynb
@@ -61,69 +61,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running calculations...\n",
-      "Range start: -512\n",
-      "Range end: 512\n",
-      "Epoch: 100\n",
-      "Population size: 100\n",
-      "Precision: 0.1\n",
-      "Elite strategy: 5\n",
-      "Variable number: 2\n",
-      "Cross probability: 20\n",
-      "Mutation probability: 20\n",
-      "Inversion probability: 20\n",
-      "Picked selection_method: best\n",
-      "Percent to next: 20.0\n",
-      "Tournaments: 20.0\n",
-      "Picked cross_method: uniform\n",
-      "Picked mutation_method: one point\n",
-      "Picked is min/max \"0\"\n",
-      "Is real: \"0\"\n",
-      "Exporting...\n",
-      "C:/Users/Hyperbook/Documents/Magister/OE1/OE1/csv_files/test.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\Hyperbook\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\tkinter\\__init__.py\", line 1948, in __call__\n",
-      "    return self.func(*args)\n",
-      "           ^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Hyperbook\\Documents\\Magister\\OE1\\OE1\\app\\libs\\UI\\window.py\", line 35, in open\n",
-      "    Calculations.run_calculations(\n",
-      "  File \"C:\\Users\\Hyperbook\\Documents\\Magister\\OE1\\OE1\\app\\calculate.py\", line 175, in run_calculations\n",
-      "    Calculations.export_to_csv()\n",
-      "  File \"C:\\Users\\Hyperbook\\Documents\\Magister\\OE1\\OE1\\app\\calculate.py\", line 229, in export_to_csv\n",
-      "    data = np.reshape(data, (data.shape[0], ))\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Hyperbook\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\numpy\\core\\fromnumeric.py\", line 285, in reshape\n",
-      "    return _wrapfunc(a, 'reshape', newshape, order=order)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Hyperbook\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\numpy\\core\\fromnumeric.py\", line 59, in _wrapfunc\n",
-      "    return bound(*args, **kwds)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^\n",
-      "ValueError: cannot reshape array of size 2200 into shape (100,)\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "! python main.py"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-30T21:50:51.376786100Z",
-     "start_time": "2023-10-30T21:50:37.593512900Z"
-    }
+    "collapsed": false
    },
    "id": "35a8503fda590a37"
   },
@@ -165,11 +109,7 @@
    "execution_count": null,
    "id": "4f5514f1c90e57a",
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-28T06:35:14.025203200Z",
-     "start_time": "2023-10-28T06:35:14.011162100Z"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -202,14 +142,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4d818f929315eb85",
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-28T06:35:14.026206800Z",
-     "start_time": "2023-10-28T06:35:14.019192100Z"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -289,7 +225,14 @@
    "source": [
     "Tabela z porównaniem wyników:\n",
     "\n",
-    "Będzie wstawiona, gdy będą wyniki. Tutaj jeszcze dać idealne wyniki"
+    "|     Metoda     |          #1         |          #2         |         #3         |         #4         |    Wynik idealny    |\n",
+    "|:--------------:|:-------------------:|:-------------------:|:------------------:|:------------------:|:-------------------:|\n",
+    "| Czas obliczeń: |    0:00:28:057137   |    0:01:09:103718   |   0:00:10:103718   |   0:00:01.002794   |         N/A         |\n",
+    "|     Wynik:     | -490.44155743728703 |  -489.1288596166677 | -467.2650857226316 | -479.6659649577644 | -511.72973973049955 |\n",
+    "|       x1       |  -493.4909623839766 | -303.89838788470934 | 475.48216902784566 |  479.9843673668784 |     -488.662570     |\n",
+    "|       x2       |   403.446995603322  |   502.495359062042  | -431.9609184171959 |  501.494870542257  |        512.0        |\n",
+    "\n",
+    "Jak wydać powyżej, najlepsze wyniki zostały osiągnięte dla konfiguracji #1, która miała najmniejsze prawdopodobieństwo mutacji, krzyżowania i inwersji. Warto zauważyć, że czas obliczeń dla tej konfiguracji był najkrótszy, co może być spowodowane tym, że algorytm szybciej znalazł najbliższe rozwiązanie do optymalnego."
    ]
   },
   {
